setup-jenkins/service.yaml
apiVersion: v1 
kind: Service 
metadata:
  name: jenkins-service 
  namespace: jenkins 
spec: 
  selector: 
    app: jenkins-server 
  type: ClusterIP
  ports: 
    - name: http-port 
      port: 8080 
      targetPort: 8080
    - name: jnlp-port
      port: 50000
      targetPort: 50000
