setup-jenkins/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress 
metadata:
  name: jenkins-ingress
  namespace: jenkins
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
   - http: 
      paths:
        - path: / 
          pathType: Prefix
          backend:
            service:
              name: jenkins-service
              port:
                number: 8080
